
        * Make access object unfocusable when Aaccessibility is disabled.

2013-04-23  ChunEon Park (Hermet)

        * Added elm_object_domain_part_text_translatable_set(),
        elm_object_item_domain_part_text_translatable_set().

2013-04-23  Jaehwan Kim

        * Fix the scrolled entry in scroller is located wrong position when the
        cursor is changed. It is a scroller in scroller. In this case, it moved
        twice.

2013-04-23  ChunEon Park (Hermet)

        * Support language change for widget items (Ctxpopup, Hoversel,
        Naviframe, Diskselector, List, Menu, Segment_Control, Toolbar, Popup,
        MultibuttonEntry)

2013-04-23  ChunEon Park (Hermet)

        * Support language,changed callback (Fileselector_Button,
        Fileselector Entry, Spinner

2013-04-25  ChunEon Park (Hermet)

        * Fix null pointer access on naviframe item deletion.

2013-04-29  ChunEon Park (Hermet)

        * Fix toolbar item clipped problem on reordering toolbar item.

2013-04-30  Jaehwan Kim

        * Add the config elm_scroll_smooth_start_enable.
        There's no tick when scroller starts scroll if it's set.

2013-04-30  ChunEon Park (Hermet)

        * Layout supports "language,changed" smart callback.

2013-04-30  Jaehwan Kim

        * The momentum animation time is changed as the amount of flick.

2013-05-01 Ryuan Choi (ryuan)

        * Fix elm_object_cursor_theme_search_enabled_set to do as it's name described.

2013-05-02 WooHyun Jung

        * elm_entry_filter_accept_set function now can recognize tags.

2013-05-02 ChunEon Park (Hermet)

        * Don't be dead even if a ctxpopup item callback function is null.

2013-05-03 Shinwoo Kim

        * Fix gengrid does not work under the accessibility.
        * Fix do not append NULL to genlist focus list.

2013-05-01 Ryuan Choi (ryuan)

        * Fix elm_clock_first_interval_set writes wrong value.

2013-05-06 WooHyun Jung

        * Add elm_entry smart callback - "text,set,done".