@@ -227,6 +227,7 @@ Fixes:
    * Fix gengrid does not work under the accessibility.
    * Fix do not append NULL to genlist focus list.
    * Fix elm_clock_first_interval_set writes wrong value.
+   * Fix remained ecore timer issue when gesture layer was deleted.
 
 Removals:
 
